# TempForNhen

./: C++_Multithreading_part_1.pptx  ECM - Programming Language - Clean Code v1.0.pptx  EMC-TM-HoangHuuHan-Team-Interns-Introduction.pptx  EMC-TM-HongLyTrungNhan-Team-Interns-Introduction.pptx  NCKH_report.docx  README.md  Summary.docx  id_rsa  id_rsa.pub  ~$EMC-TM-HoangHuuHan-Team-Interns-Introduction.pptx  ~$KH_report.docx
UTE/: report_internship.docx
VectorReimplement/: CMakeLists.txt  CmakeLists.txt
VectorReimplement/inc/: vec.h
VectorReimplement/src/: main.cpp  vec.cpp
dev_kit/: dev_kit.json  info
dev_kit/20241109_222053/: PCB_dev_kit.json  info
dev_kit/20241109_222431/: PCB_dev_kit.json  info
dev_kit/20241109_222536/: PCB_dev_kit.json  info
dev_kit/20241109_222616/: PCB_dev_kit.json  info
dev_kit/20241109_222653/: PCB_dev_kit.json  info
dev_kit/20241109_223032/: info
dev_kit/20241109_223035/: PCB_dev_kit.json  info
dev_kit/20241109_223203/: PCB_dev_kit.json  info
dev_kit/20241109_223302/: PCB_dev_kit.json  info
dev_kit/20241109_224139/: info
dev_kit/20241109_224141/: info
dev_kit/20241109_224142/: PCB_dev_kit.json  info
dev_kit/20241109_224143/: info
dev_kit/20241109_225114/: PCB_dev_kit.json  info
dev_kit/20241109_225256/: PCB_dev_kit.json  info
document/: 1. BM11_Giấy đề nghị thanh toán kinh phí ĐTSV.docx  2. KHTC-CK Giấy đề nghị thanh toán chuyển khoản.docx  3. Bang ky nhan thu lao thuc hien de tai.doc  4. BM13_Biên bản bàn giao thiết bị.docx  BIÊN BẢN NHẬN HỒ SƠ THANH TOÁN.docx
(+35 files in other folders)
